<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#F3F6C9"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/playWithFriend"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chooseFriend"
                android:text="@string/chooseF"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chooseYou"
                android:text="@string/choose"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:textSize="15sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F8DC99"
                android:padding="6dp">

                <Button
                    android:id="@+id/btnX"
                    android:background="@drawable/btn_design"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:text="@string/x"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    />

                <Button
                    android:id="@+id/btn0"
                    android:background="@drawable/btn_design"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:text="@string/z"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginStart="30dp"
                    />

            </GridLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardElevation="15dp"
                app:cardCornerRadius="15dp"
                app:cardUseCompatPadding="true">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="3"
                android:padding="10dp"
                android:background="#F8DC99"
                tools:ignore="UselessParent">


                <Button
                    android:id="@+id/btn1"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_btn_design"
                    android:onClick="Check"
                    android:textSize="25sp"
                    android:text="@string/empty"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml" />

                <Button
                    android:id="@+id/btn2"
                    android:background="@drawable/set_btn_design"
                    android:textColor="@color/black"
                    android:onClick="Check"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginStart="11dp"
                    tools:ignore="UsingOnClickInXml" />

                <Button
                    android:id="@+id/btn3"
                    android:background="@drawable/set_btn_design"
                    android:textColor="@color/black"
                    android:onClick="Check"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml"
                    android:layout_marginStart="11dp" />

                <Button
                    android:id="@+id/btn4"
                    android:background="@drawable/set_btn_design"
                    android:textColor="@color/black"
                    android:onClick="Check"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml"
                    android:layout_marginTop="11dp"/>

                <Button
                    android:id="@+id/btn5"
                    android:background="@drawable/set_btn_design"
                    android:textColor="@color/black"
                    android:onClick="Check"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="11dp" />

                <Button
                    android:id="@+id/btn6"
                    android:background="@drawable/set_btn_design"
                    android:onClick="Check"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="11dp" />

                <Button
                    android:id="@+id/btn7"
                    android:background="@drawable/set_btn_design"
                    android:textColor="@color/black"
                    android:onClick="Check"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml"
                    android:layout_marginTop="11dp"/>

                <Button
                    android:id="@+id/btn8"
                    android:background="@drawable/set_btn_design"
                    android:textColor="@color/black"
                    android:onClick="Check"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="11dp" />

                <Button
                    android:id="@+id/btn9"
                    android:background="@drawable/set_btn_design"
                    android:textColor="@color/black"
                    android:onClick="Check"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="11dp" />

            </GridLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#F4D58C"
                app:cardCornerRadius="25dp"
                app:cardElevation="2dp">

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/res"
                android:textColorHint="#EF7048"
                android:textColor="#000000"
                android:background="#F4D58C"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="0dp"
                android:padding="15dp"
                />

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_design"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10sp"
                android:textColor="#000000"
                android:text="@string/playA"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/btnPlay"/>

            <Button
                android:id="@+id/comp"
                android:background="@drawable/btn_design"
                android:paddingHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:layout_marginStart="110dp"
                android:text="@string/com"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>