<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstActivity"
    android:id="@+id/llout"
    android:background="#F8DC99"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">

           <ScrollView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               tools:ignore="UselessParent">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:background="#FABE74"
                   android:padding="10dp"
                   android:gravity="center">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:text="@string/mode"
                       android:textColor="#000000"
                       android:textSize="25sp"
                       android:textStyle="bold"
                       android:id="@+id/mode"
                       />

                   <com.airbnb.lottie.LottieAnimationView
                       android:id="@+id/laView"
                       android:layout_width="200dp"
                       android:layout_height="100dp"
                       app:lottie_autoPlay="true"
                       app:lottie_loop="true"
                       app:lottie_rawRes="@raw/lottie" />

                   <Button
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="#000000"
                       android:background="@drawable/btn_design"
                       android:paddingHorizontal="10dp"
                       android:id="@+id/playWith"
                       android:text="@string/playWithFriend"
                       android:textStyle="bold"
                       android:textSize="20sp" />

                   <Button
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="#000000"
                       android:id="@+id/playComp"
                       android:text="@string/YouComputer"
                       android:textSize="20sp"
                       android:textStyle="bold"
                       android:background="@drawable/btn_design"
                       android:paddingHorizontal="10dp"
                       android:layout_marginTop="15sp"
                       android:layout_marginBottom="0dp"/>


               </LinearLayout>

           </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>